<resources>
    <string name="app_name">捡喽</string>
    <string name="shouye">首页</string>
    <string name="shequ">社区</string>
    <string name="xiaoxi">消息</string>
    <string name="wode">我的</string>
    <string name="fabu">发布</string>
    <string name="queren">确认</string>
    <string name="fenlei">分类</string>
    <string name="shouji">手机</string>
    <string name="shengxianshuiguo">生鲜水果</string>
    <string name="youxi">游戏</string>
    <string name="dianzilingjian">电子零件</string>
    <string name="tushu">图书</string>
    <string name="dongmanzhoubian">动漫/周边</string>
    <string name="chongwuyongpin">宠物/用品</string>
    <string name="wangluoshebei">网络设备</string>
    <string name="bangongyongpin">办公用品</string>
    <string name="youxishebei">游戏设备</string>
    <string name="yundonghuwai">运动户外</string>
    <string name="wangjuyueqi">玩具乐器</string>
    <string name="jiayongdianqi">家用电器</string>
    <string name="qixingyongju">骑行用具</string>
    <string name="shuma">3C数码</string>
    <string name="yinxiang">音像</string>
    <string name="menpiao">门票</string>
    <string name="jujiariyong">居家日用</string>
    <string name="shitikapian">实体卡片</string>
    <string name="qita">其他</string>
    <string name="jiaqian">价钱</string>
    <string name="jiage">价格</string>
    <string name="money_zero">0.00</string>
    <string name="rushoujia">入手价</string>
    <string name="baoyou">包邮</string>
    <string name="anjuligusuan">按距离估算</string>
    <string name="yunfei">运费</string>
    <string name="fabuxianzhi">发布闲置</string>
    <string name="fatiezi">发帖子</string>
    <string name="time">00:00</string>
</resources>
