<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".publish.publishGood.PublishGoodMoney">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/PublishGoodMoney_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/picture_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/PublishGoodMoney_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/jiaqian"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/PublishGoodMoney_publish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/queren"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/key_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/jiage"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="2dp"
            android:layout_marginStart="60dp"
            android:src="@mipmap/rmb"/>

        <EditText
            android:id="@+id/PublishGoodMoney_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="160dp"
            android:background="@null"
            android:digits="1234567890."
            android:ellipsize="end"
            android:hint="@string/money_zero"
            android:inputType="phone|number"
            android:maxEms="15"
            android:textColor="#474747"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray"  />


    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/former_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxEms="15"
            android:text="@string/rushoujia"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="2dp"
            android:layout_marginStart="60dp"
            android:src="@mipmap/rmb"/>

        <EditText
            android:id="@+id/PublishGoodMoney_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="160dp"
            android:background="@null"
            android:digits="1234567890."
            android:ellipsize="end"
            android:hint="@string/money_zero"
            android:inputType="phone|number"
            android:maxEms="15"
            android:textColor="#474747"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray"  />


    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/trans_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxEms="15"
            android:text="@string/yunfei"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="2dp"
            android:layout_marginStart="60dp"
            android:src="@mipmap/rmb"/>

        <EditText
            android:id="@+id/PublishGoodMoney_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="160dp"
            android:background="@null"
            android:digits="1234567890."
            android:ellipsize="end"
            android:hint="@string/money_zero"
            android:inputType="phone|number"
            android:maxEms="15"
            android:textColor="#474747"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/PublishGoodMoney_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/baoyou" />
            <RadioButton
                android:id="@+id/PublishGoodMoney_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anjuligusuan" />
        </RadioGroup>
    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray"  />
    </LinearLayout>