<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jianlou.Activity.MainActivity">

    <FrameLayout
        android:id="@+id/id_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/id_diverline" />

    <View
        android:id="@+id/id_diverline"
        android:layout_above="@+id/id_bottom_tags"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#C2C5CE"/>

    <LinearLayout
        android:id="@+id/id_bottom_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_tag_bg"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <RadioGroup
            android:id="@+id/id_navcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="horizontal">
            <RadioButton
                android:checked="true"
                android:id="@+id/id_nav_btshouye"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:background="@android:color/background_light"
                android:button="@null"
                android:clickable="true"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/x_nav_menu_sy"

                android:gravity="center"
                android:onClick="switchView"
                android:text="@string/shouye"
                android:textColor="@drawable/x_nav_menu_color"
                android:textSize="10sp"
                android:focusable="true" />

            <RadioButton
                android:id="@+id/id_nav_btshequ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:button="@null"
                android:clickable="true"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/x_nav_menu_sq"
                android:gravity="center"
                android:onClick="switchView"
                android:text="@string/shequ"
                android:textColor="@drawable/x_nav_menu_color"
                android:textSize="10sp"
                android:focusable="true" />

            <ImageView
                android:id="@+id/id_nav_btadd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:button="@null"
                android:clickable="true"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:onClick="switchView"
                android:src="@mipmap/add"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="10dp"
                android:textColor="@drawable/x_nav_menu_color"
                android:focusable="true" />

            <RadioButton
                android:id="@+id/id_nav_btxiaoxi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:button="@null"
                android:clickable="true"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/x_nav_menu_xx"
                android:gravity="center"
                android:onClick="switchView"
                android:text="@string/xiaoxi"
                android:textColor="@drawable/x_nav_menu_color"
                android:textSize="10sp"
                android:focusable="true" />

            <RadioButton
                android:id="@+id/id_nav_btwode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:button="@null"
                android:clickable="true"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/x_nav_menu_wd"
                android:gravity="center"
                android:onClick="switchView"
                android:text="@string/wode"
                android:textColor="@drawable/x_nav_menu_color"
                android:textSize="10sp"
                android:focusable="true" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>